[metadata]
name = easy3ds
version = 1.0.0
author = Michiel Sikma
author-email = michiel@sikma.org
home-page = https://github.com/msikma/easy3ds
description = A simple script for generating 3DS CIA files from RPG Maker 2000 games using EasyRPG
license = MIT
platform = any
keywords = EasyRPG, RPG Maker 2000, RPG Maker 2003
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
	Programming Language :: Python :: 3.0

[options]
zip_safe = true
include_package_data = true
python_requires = >= 3.0.*
